add darkmode, and scrolltotop, and diseño en general

--- a/portfolio/src/app/pages/home/component/proyectos/proyectos.html
+++ b/portfolio/src/app/pages/home/component/proyectos/proyectos.html
@@ -1,5 +1,5 @@
 <!-- Proyectos -->
-<div class="col-12" data-aos="fade-up">
+<div class="col-12">
     <h2 class="text-center text-primary mb-4">Proyectos Destacados</h2>
     <div class="row">
         <div class="col-md-4 mb-4">
@@ -17,6 +17,24 @@
                         <a href="https://allpokemoncard48.netlify.app/" class="btn btn-outline-primary btn-sm">Demo</a>
                         <a href="https://github.com/Aubar48/angular_list_pokemon"
                             class="btn btn-outline-secondary btn-sm">Código</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4 mb-4">
+            <div class="card h-100 shadow-sm">
+                <img src="https://github.com/Aubar48/Huggins/raw/master/public/images/lcrCrows.png"
+                    class="project-image" alt="Task Manager">
+                <div class="card-body">
+                    <h5 class="card-title">Huggins landing page</h5>
+                    <p class="card-text">Landing page para el gremio Huggins del video juego Night Crows.</p>
+                    <div class="d-flex gap-2 mb-3">
+                        <span class="badge bg-primary">React</span>
+                        <span class="badge bg-success">Tailwindcss</span>
+                    </div>
+                    <div class="d-flex gap-2">
+                        <a href="https://latincrowshuginn.netlify.app/" class="btn btn-outline-primary btn-sm">Demo</a>
+                        <a href="https://github.com/Aubar48/Huggins" class="btn btn-outline-secondary btn-sm">Código</a>
                     </div>
                 </div>
             </div>
