--- a/portfolio/src/app/pages/home/home.html
+++ b/portfolio/src/app/pages/home/home.html
@@ -3,9 +3,9 @@
     <div class="row">
         <app-sobre-mi></app-sobre-mi>
         <div class="row mb-5">
-            <app-experiencia></app-experiencia>
-            <app-educacion></app-educacion>
+            <app-experiencia class="col-md-6"></app-experiencia>
+            <app-educacion class="col-md-6"></app-educacion>
         </div>
-        <app-proyectos></app-proyectos>
+        <app-proyectos class="col-12"></app-proyectos>
     </div>
 </div>
