--- a/portfolio/src/app/app.html
+++ b/portfolio/src/app/app.html
@@ -1,5 +1,9 @@
-<app-header></app-header>
-<app-carrousel></app-carrousel>
-<router-outlet></router-outlet>
-<app-spotify></app-spotify>
-<app-footer></app-footer>
+<div class="body">
+    <app-header></app-header>
+    <app-carrousel></app-carrousel>
+
+    <router-outlet></router-outlet>
+
+    <app-spotify></app-spotify>
+    <app-footer></app-footer>
+</div>
