--- a/portfolio/src/app/component/header/header.html
+++ b/portfolio/src/app/component/header/header.html
@@ -1,20 +1,32 @@
-  <!-- Navbar -->
-  <nav class="navbar navbar-expand-lg px-4 sticky-top shadow">
-    <div class="container">
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <button class="btn btn-outline-primary nav-link shadow-lg mt-2" onclick="toggleTheme()"><i
-                class="fas fa-moon"></i> Dark
-              Mode</button>
-          </li>
-          <li class="nav-item"><a class="nav-link" href="https://wa.me/+5493517587047" target="_blank"><img
-                src="./assets/icon/icons8-whatsapp.svg" class="wsp" alt="WhatsApp" width="40" height="40"></a></li>
-        </ul>
-      </div>
+<!-- Navbar -->
+<nav class="navbar navbar-expand-lg px-4 sticky-top shadow">
+  <div class="container">
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <button class="btn btn-outline-primary nav-link shadow-lg mt-2" (click)="toggleDarkMode()">
+            <i class="fas fa-moon"></i> Dark Mode
+          </button>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="https://wa.me/+5493517587047" target="_blank">
+            <img src="./assets/icon/icons8-whatsapp.svg" class="wsp" alt="WhatsApp" width="40" height="40">
+          </a>
+        </li>
+      </ul>
     </div>
-  </nav>
+  </div>
+
+</nav>
+<!-- Al final de header.html -->
+<button
+  #scrollBtn
+  class="btn btn-primary"
+  (click)="scrollToTop()"
+  style="display: none; position: fixed; bottom: 20px; right: 20px; z-index: 9999;">
+  ↑
+</button>
