--- a/portfolio/src/styles.css
+++ b/portfolio/src/styles.css
@@ -1,4 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
+@import "bootstrap/dist/css/bootstrap.min.css";
 
 /* Base Styles */
 :root {
@@ -11,11 +12,11 @@
   height: 40px !important;
 }
 
-body {
+.body {
   background-color: var(--light-bg);
 }
 
-[data-bs-theme="dark"] body {
+[data-bs-theme="dark"] .body {
   background-color: var(--dark-bg);
 }
 
