--- a/portfolio/src/app/app.html
+++ b/portfolio/src/app/app.html
@@ -1,9 +1,11 @@
 <div class="body">
-    <app-header></app-header>
-    <app-carrousel></app-carrousel>
+  <app-header></app-header>
+  <app-carrousel></app-carrousel>
 
-    <router-outlet></router-outlet>
+  <app-loader *ngIf="loading"></app-loader>
 
-    <app-spotify></app-spotify>
-    <app-footer></app-footer>
+  <router-outlet></router-outlet>
+
+  <app-spotify></app-spotify>
+  <app-footer></app-footer>
 </div>
