--- a/portfolio/src/app/app.html
+++ b/portfolio/src/app/app.html
@@ -1,5 +1,7 @@
 <div class="body">
   <app-header></app-header>
+  <app-accessibility></app-accessibility>
+
   <app-carrousel></app-carrousel>
 
   <app-loader *ngIf="loading"></app-loader>
@@ -8,4 +10,5 @@
 
   <app-spotify></app-spotify>
   <app-footer></app-footer>
+
 </div>
