--- a/styles.css
+++ b/styles.css
@@ -49,15 +49,8 @@ body {
   width: 100%;
 }
 
-/* Social Links */
-.social-links a {
-  color: inherit;
-  text-decoration: none;
-  transition: color 0.3s;
-}
-
-.social-links a:hover {
-  color: #0d6efd;
+.icons-skills{
+padding-top: 5px;
 }
 
 /* Profile Image */
