--- a/portfolio/src/app/component/carrousel/carrousel.html
+++ b/portfolio/src/app/component/carrousel/carrousel.html
@@ -7,10 +7,10 @@
     </div>
     <div class="carousel-inner">
         <div class="carousel-item active">
-            <img src="./assets/ispc.png" class="d-block w-100" alt="...">
+            <img src="./assets/carrousel/ispc.webp" class="d-block w-100" alt="...">
         </div>
         <div class="carousel-item">
-            <img src="./assets/ispc2.png" class="d-block w-100" alt="...">
+            <img src="./assets/carrousel/ispc2.webp" class="d-block w-100" alt="...">
         </div>
     </div>
 </div>
