--- a/styles.css
+++ b/styles.css
@@ -33,6 +33,51 @@ body {
   background-color: #212529;
 }
 
+.modal-cv {
+  display: none;
+  position: fixed;
+  z-index: 999;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.8);
+}
+
+.modal-content-cv {
+  background-color: #fefefe;
+  margin: 5% auto;
+  padding: 1rem;
+  border: 1px solid #888;
+  width: 80%;
+  max-width: 900px;
+  height: 100vh;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+}
+
+.modal-content-cv iframe {
+  flex: 1;
+  width: 100%;
+  height: 100%;
+}
+
+.close-cv {
+  color: #aaa;
+  font-size: 28px;
+  font-weight: bold;
+  position: absolute;
+  right: 15px;
+  top: 5px;
+  cursor: pointer;
+}
+
+.close-cv:hover {
+  color: black;
+}
+
 /* Scroll to Top Button */
 .scroll-to-top {
   position: fixed;
